# dynamodb-manager

./: Makefile  README.md  mise.toml  pubspec.yaml
docs/: architecture.md  aws-auth.md  development.md  security.md  troubleshooting.md
integration_test/: simple_test.dart
lib/: main.dart
lib/src/: app.dart
lib/src/controllers/: workspace_controller.dart
lib/src/models/: dynamo_item.dart  dynamo_table.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: aws_profiles.dart  dev_logs.dart  dynamodb.dart
lib/src/screens/: dev_logs_screen.dart  profile_selection_screen.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: aws_profiles.rs  dev_logs.rs  dynamodb.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_dynamodb_manager.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_dynamodb_manager.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
