[package]
name = "rust_lib_dynamodb_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
aws-config = { version = "1.8.12", features = ["credentials-login", "rustls"] }
aws-sdk-dynamodb = "1.101.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rust-ini = { version = "0.21.3", features = ["brackets-in-section-names", "case-insensitive", "inline-comment", "unicase"] }
libc = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
